# GreenHouse

./: CMakeLists.txt  CMakeUserPresets.json
build_uf/: arm_proj.uf2
greenhouse_server/: .gitignore  gh  index.js  package-lock.json  package.json
greenhouse_server/style/: style.css
greenhouse_server/views/: home.ejs  home.js
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
src/ipstack/: IPStack.cpp  IPStack.h  lwipopts.h  mbedtls_config.h  tls_common.c
